2009-01-15  Alper KANAT  <alperkanat@raptiye.org>

	* TODO, blog/admin.py: fixed a bug for posting to twitter..

2009-01-14  Alper KANAT  <alperkanat@raptiye.org>

	* media/images/flickr_logo.png, templates/blog/flickr.html,
	templates/blog/sidebar.html: added flickr flash widget to the sidebar..
	* TODO, blog/admin.py: added a bugfix todo.. trying to prevent new blog
	entries being posted to twitter until they're really published and also the
	older ones being published when they're updated.. (maybe this is an option,
	heh? :))
	* media/temp: deleted this link since it causes permission problems.. this
	link should be created during installation..
	* templates/users/login.html, users/views.py: fixed a bug in the login page
	when wrong credentials are given. also changed the way of posting error
	messages at login.. this behaviour must be extended to whole raptiye..

2009-01-07  Alper KANAT  <alperkanat@raptiye.org>

	* .gitignore: added gitignore file since i'm trying to move raptiye's code
	base to git.. :)
	* media/images/upload/.gitignore: added this empty file to keep track of the
	directory..

2009-01-06  Alper KANAT  <alperkanat@raptiye.org>

	* TODO: new todos..
	* blog/templatetags/blog_filters.py: a fix to stop numerous weird
	HTMLParseError exceptions during code colorization..

2009-01-05  Alper KANAT  <alperkanat@raptiye.org>

	* extra/initials.py, settings-example.py, users/backends.py, users/views.py:
	removed anonymous and openid users' dumb passwords since they were messing
	around.. now default accounts have unusable passwords.. openid users can use
	their openid and normal login info at the same time..
	* extra/messages.py: changed some literals in the strings..
	* TODO, templates/users/profile.html, extra/openid_consumer.py,
	users/backends.py, users/forms.py, users/models.py, users/views.py: changed
	the multiple openids per account design into 1-1 since it was hard and