@@ -101,6 +101,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		Giriş yapmamış kullanıcıların,
 		<br>
 		&nbsp;&nbsp;&nbsp;<strong>&raquo;</strong> tüm yorumları moderasyondan geçer.
+		<div style="margin-top: 10px; text-align: center">
+			<a href="{% url login_page %}" class="ulink">giriş yap</a> | 
+			<a href="{% url registration %}" class="ulink">kaydol</a>
+		</div>
 	</div>
 	{% endif %}
 	<div id="entry_comment_write_left">
